# cpptest

./: .clang-format  .gitignore  CMakeLists.txt
include/: cpptest.hpp
src/: cpptest.cpp
